# hex-dataops

./: pyproject.toml
.github/workflows/: deploy.yaml
ice-cream-dataops/: config.prod.yaml  config.test.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/extraction_pipelines/: ep_icapi_asset.yaml  ep_icapi_datapoints.yaml  ep_icapi_timeseries.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/functions/: functions.Functions.yaml  schedules.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/functions/icapi_assets_extractor/: handler.py
ice-cream-dataops/modules/bootcamp/ice_cream_api/functions/icapi_datapoints_extractor/: handler.py
ice-cream-dataops/modules/bootcamp/ice_cream_api/functions/icapi_timeseries_extractor/: handler.py
ice-cream-dataops/modules/bootcamp/ice_cream_api/transformations/: create_asset_hierarchy.schedule.yaml  create_asset_hierarchy.sql  create_asset_hierarchy.yaml  icapi_ts_assets_contextualization.schedule.yaml  icapi_ts_assets_contextualization.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/workflows/: wf_icapi_data_pipeline.WorkFlow.yaml  wf_icapi_data_pipeline.WorkFlowTrigger.yaml  wf_icapi_data_pipeline.WorkflowVersion.yaml
