[tool.poetry]
name = "hex-dataops"
version = "0.1.0"
description = ""
authors = ["Dietmar Winkler <dietmar.winkler@skagerakenergi.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cognite-toolkit = "^0.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
