[tool.poetry]
name = "hex-dataops"
version = "0.1.0"
description = ""
authors = ["Dietmar Winkler <dietmar.winkler@skagerakenergi.no>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
cognite-toolkit = "=0.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
